[gd_scene load_steps=23 format=3 uid="uid://bui0slu6tmrbj"]

[ext_resource type="Script" path="res://enemies/vile/vile.gd" id="1_edp0d"]
[ext_resource type="AudioStream" uid="uid://33wnq3nw3nwv" path="res://assets/enemies/cacodemon/audio/dscacdth.wav" id="2_7byt7"]
[ext_resource type="Texture2D" uid="uid://cyqikibql5vct" path="res://assets/enemies/cacodemon/back_right.png" id="2_kt8v2"]
[ext_resource type="Texture2D" uid="uid://w73nwl5rw56f" path="res://assets/enemies/cacodemon/forward_right.png" id="2_rc5h8"]
[ext_resource type="Script" path="res://enemies/sprite.gd" id="3_b3k31"]
[ext_resource type="Texture2D" uid="uid://dcinqeemnyt0g" path="res://assets/enemies/cacodemon/left.png" id="4_4u2dp"]
[ext_resource type="AudioStream" uid="uid://cl0p6m7342rph" path="res://assets/enemies/cacodemon/audio/dsdmpain.wav" id="4_5fdg6"]
[ext_resource type="Texture2D" uid="uid://87iv665tqd5u" path="res://assets/enemies/cacodemon/forward_left.png" id="4_npq3b"]
[ext_resource type="Texture2D" uid="uid://86gam1n57kqg" path="res://assets/enemies/cacodemon/forward.png" id="4_v531f"]
[ext_resource type="Texture2D" uid="uid://0h4hpvcvcqof" path="res://assets/enemies/cacodemon/left_back.png" id="6_pd2g2"]
[ext_resource type="Texture2D" uid="uid://cutlb0f14522c" path="res://assets/enemies/cacodemon/back.png" id="7_vplfv"]
[ext_resource type="Texture2D" uid="uid://duj8ql3hg3tvv" path="res://assets/enemies/cacodemon/right.png" id="9_y8q4b"]
[ext_resource type="Texture2D" uid="uid://digcxn2rlhpsi" path="res://assets/enemies/cacodemon/die.png" id="12_jbk0h"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_5mmv0"]
height = 3.0

[sub_resource type="SphereShape3D" id="SphereShape3D_0632k"]
radius = 60.0

[sub_resource type="Animation" id="Animation_bqd3m"]
resource_name = "die"
length = 1.1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("DieSound:playing")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"values": []
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("WalkAnimationPlayer")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [false],
"method": &"stop"
}]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite:texture")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("12_jbk0h")]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Sprite:hframes")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Sprite:vframes")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Sprite:frame")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath(".:process_mode")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0, 1.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 4]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("Collider:disabled")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("Sprite:billboard")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}

[sub_resource type="Animation" id="Animation_rst7e"]
resource_name = "Hit"
step = 0.01
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HitSound")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [0.0],
"method": &"play"
}]
}

[sub_resource type="Animation" id="Animation_k8s5w"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("DieSound:playing")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite:texture")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_rc5h8")]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite:hframes")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Sprite:vframes")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath(".:process_mode")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Collider:disabled")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Sprite:billboard")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3ecei"]
_data = {
"Die": SubResource("Animation_bqd3m"),
"Hit": SubResource("Animation_rst7e"),
"RESET": SubResource("Animation_k8s5w")
}

[sub_resource type="Animation" id="Animation_7uq0u"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_lj8bf"]
resource_name = "Walk"
length = 0.6
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_43qpb"]
_data = {
"RESET": SubResource("Animation_7uq0u"),
"Walk": SubResource("Animation_lj8bf")
}

[node name="Vile" type="CharacterBody3D" groups=["Enemy"]]
collision_layer = 4
collision_mask = 7
script = ExtResource("1_edp0d")

[node name="Collider" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)
shape = SubResource("CapsuleShape3D_5mmv0")

[node name="Sprite" type="Sprite3D" parent="." node_paths=PackedStringArray("damage_animation_player")]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 1.5, 0)
billboard = 2
texture_filter = 0
texture = ExtResource("2_rc5h8")
hframes = 2
vframes = 2
script = ExtResource("3_b3k31")
damage_animation_player = NodePath("../DamageAnimationPlayer")
textures = Array[Texture2D]([ExtResource("4_v531f"), ExtResource("4_npq3b"), ExtResource("4_4u2dp"), ExtResource("6_pd2g2"), ExtResource("7_vplfv"), ExtResource("2_kt8v2"), ExtResource("9_y8q4b"), ExtResource("2_rc5h8")])

[node name="NavigationAgent" type="NavigationAgent3D" parent="."]
height = 2.0

[node name="DetectionRange" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="Collider" type="CollisionShape3D" parent="DetectionRange"]
shape = SubResource("SphereShape3D_0632k")

[node name="PlayerCast" type="RayCast3D" parent="DetectionRange"]
target_position = Vector3(0, 0, 0)

[node name="DieSound" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
stream = ExtResource("2_7byt7")

[node name="HitSound" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
stream = ExtResource("4_5fdg6")

[node name="DamageAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_3ecei")
}
autoplay = "Walk"

[node name="WalkAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_43qpb")
}
autoplay = "Walk"

[node name="HitTimer" type="Timer" parent="."]
autostart = true

[connection signal="body_entered" from="DetectionRange" to="." method="_on_detection_range_body_entered"]
[connection signal="body_exited" from="DetectionRange" to="." method="_on_detection_range_body_exited"]
[connection signal="timeout" from="HitTimer" to="." method="_on_hit_timer_timeout"]
